<resources>
    <string name="app_name">Sadqa App ne</string>
    <string name="chose_you_amount">CHOOSE YOUR DONATION AMOUNT</string>
    <string name="amount_1">Rs 5</string>
    <string name="amount_2">Rs 10</string>
    <string name="amount_3">Rs 50</string>
    <string name="amount_4">Rs 100</string>
    <string name="other_amount">Other Amount</string>


    <string name="select_sim">Choose Your sim</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="alert_title_text">Send sadqa sms</string>
    <string name="alert_msg">Send sms.Are you sure?</string>
    <string name="facebook_app_id">851814128334484</string>
    <string name="fb_login_protocol_scheme">fb851814128334484</string>


    <string name="font_myriadpro_regular" translatable="false">myriadpro_regular.otf</string>
    <string name="font_name_myriadpro_regular" translatable="false">myriadpro_regular.otf</string>
    <string name="font_helvertica" translatable="false">helvertica.otf</string>
    <string name="font_name_helvertica" translatable="false">helvertica.otf</string>

    <string name="home">Home</string>
    <string name="login.signup">Log in / Sign up</string>
    <string name="favorites">My Favorites</string>
    <string name="about.us">About Us</string>
    <string name="faqs">FAQs</string>
    <string name="setting">Settings</string>
    <string name="contact.us">Contact Us</string>
    <string name="language">Language</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="create.account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="current.password">Current Password</string>
    <string name="confirm.password">Confirm Password</string>
    <string name="retype.password">Retype New Password</string>
    <string name="update.password">Update Password</string>
    <string name="new.password">New Password</string>
    <string name="full.name">Full Name</string>
    <string name="agree.continue">Agree &amp; Create Account</string>
    <string name="forget.pass">Forgot Password</string>
    <string name="forget.password"><![CDATA[<u>Forgot Password?</u>]]></string>
    <string name="read.privacy">Read Privacy Policy and Term of Use Agreement</string>
    <string name="no.ac.register"><![CDATA[<font color=#595959>No Account?&nbsp;&nbsp;<b><font color=#595959>Register</b>]]></string>

    <string name="have.account"><![CDATA[<font color=#555555>Have an account?&nbsp;&nbsp;<b><font color=#555555><u>Log in</u></b>]]></string>

    <string name="error.write.storage.permission">Approval is needed to save your photo on your device.</string>
    <string name="login">Login</string>
    <string name="img.description">img</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">google_maps_key</string>
</resources>
