<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="java.util.List"/>
        <import type="com.geniteam.SadqaApp.model.HomeScreenUIModel"/>
        <variable name="uiItemList" type="List&lt;com.geniteam.SadqaApp.model.HomeScreenUIModel&gt;"/>
        <variable
            name="homeScreenUiItem"
            type="com.geniteam.SadqaApp.model.HomeScreenUIModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ae.lateston.uaecompanies.activity.MainActivity"
        android:background="@android:color/white"
        tools:showIn="@layout/app_bar_main">

        <include
            android:id="@+id/include"
            layout="@layout/common_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".6"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/choose_amount_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/chose_you_amount"
                android:textSize="@dimen/big.txt.size"
                app:fontStyle="@{homeScreenUiItem.getFontstyle()}"
                app:fontColor="@{homeScreenUiItem.getFontColor}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_chose_amount_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="false"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_chose_amunt0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/tvChoose0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/halfStdmargin"
                    android:layout_toRightOf="@+id/icon_chose_amunt0"
                    android:text="@string/amount_1"
                    android:textSize="@dimen/def.txt.size"
                    app:fontStyle="@{homeScreenUiItem.getFontstyle()}"
                    app:fontColor="@{homeScreenUiItem.getFontColor}"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_chose_amount_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/rl_chose_amount_1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_chose_amunt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/tvChoose1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/halfStdmargin"
                    android:layout_toRightOf="@+id/icon_chose_amunt1"
                    android:text="@string/amount_2"
                    android:textSize="@dimen/def.txt.size"
                    app:fontStyle="@{homeScreenUiItem.getFontstyle()}"
                    app:fontColor="@{homeScreenUiItem.getFontColor}"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_chose_amount_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_chose_amount_2"
                android:layout_centerVertical="false"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_chose_amunt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/tvChoose3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/halfStdmargin"
                    android:layout_toRightOf="@+id/icon_chose_amunt2"
                    android:text="@string/amount_3"
                    android:textSize="@dimen/def.txt.size"
                    app:fontStyle="@{homeScreenUiItem.getFontstyle()}"
                    app:fontColor="@{homeScreenUiItem.getFontColor}"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_chose_amount_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/other_amounts"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_chose_amunt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/tvChoose4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/halfStdmargin"
                    android:layout_toRightOf="@+id/icon_chose_amunt3"
                    android:text="@string/amount_4"
                    android:textSize="@dimen/def.txt.size"
                    app:fontStyle="@{homeScreenUiItem.getFontstyle()}"
                    app:fontColor="@{homeScreenUiItem.getFontColor}"/>
            </RelativeLayout>

            <Button
                android:id="@+id/other_amounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="@dimen/fullStdMargin"
                android:text="@string/other_amount" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fullStdMargin"
                android:gravity="center"
                android:text="TextView" />

            <Button
                android:id="@+id/frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Frequency" />

        </LinearLayout>
    </LinearLayout>


</layout>